# imagectl

./: .gitignore  README.md  pyproject.toml  renovate.json  scripts.py
imagectl/: __init__.py  __main__.py  api.py  constants.py  models.py
imagectl/cmds/: __init__.py  dedupe.py  index.py  organise.py  verify.py
test_resources/dedupe_ref/: .imagectl
test_resources/dedupe_target/: .imagectl
tests/: test_dedupe_cmd.py  test_index_entry.py  test_main.py  test_organise.py
