[tool.poetry]
name = "imagectl"
version = "0.1.0"
description = "Manage an image library"
authors = ["Tim Stephenson <tim@knowprocess.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
pillow = "^11.1.0"

[tool.poetry.scripts]
imagectl = "imagectl.__main__:main"
tests = "scripts:tests"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.10"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
